--- a/GamePlayersReturnSystem/Business/Business.csproj
+++ b/GamePlayersReturnSystem/Business/Business.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +47,10 @@
     <Compile Include="AreaBiz.cs" />
     <Compile Include="DataCache.cs" />
     <Compile Include="PartnerBiz.cs" />
+    <Compile Include="PartnerService\IPartnerService.cs" />
+    <Compile Include="PartnerService\PartnerServiceAttribute.cs" />
+    <Compile Include="PartnerService\PartnerServiceFactory.cs" />
+    <Compile Include="PartnerService\PlayerReturnService.cs" />
     <Compile Include="PlayerActivityLogBiz.cs" />
     <Compile Include="PlayerBiz.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +70,9 @@
       <Project>{1e4a304d-46c4-4632-a464-8c855f268891}</Project>
       <Name>IData</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
