--- a/GamePlayersReturnSystem/GamePlayersReturnSystemWebAPI.Tests/GamePlayersReturnSystemWebAPI.Tests.csproj
+++ b/GamePlayersReturnSystem/GamePlayersReturnSystemWebAPI.Tests/GamePlayersReturnSystemWebAPI.Tests.csproj
@@ -99,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaDBTest.cs" />
+    <Compile Include="Controllers\LoginControllerTest.cs" />
+    <Compile Include="Controllers\PlayerReturnControllerTest.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
     <Compile Include="PartnerDBTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
