--- a/GamePlayersReturnSystem/GamePlayersReturnSystemWebAPI/GamePlayersReturnSystemWebAPI.csproj
+++ b/GamePlayersReturnSystem/GamePlayersReturnSystemWebAPI/GamePlayersReturnSystemWebAPI.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PartnerController.cs" />
+    <Compile Include="Controllers\PlayerReturnController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
